<resources>
    <string name="app_name">RC</string>
    <string name="main_autorec">快速识别</string>
    <string name="main_exactrec">精准人工</string>

    <!-- menu fragment -->
    <string name="menu_main_ocr">OCR</string>
    <string name="menu_main_file">File</string>
    <string name="menu_main_orders">Orders</string>
    <string name="menu_main_settings">Settings</string>

    <string name="menu_drawer_open">Open</string>
    <string name="menu_drawer_close">Close</string>


    <string name="fileinfo_filemsg">文件信息</string>
    <string name="fileinfo_sysinfo">系统提示</string>
    <string name="fileinfo_pagenumber">张数:&#160;&#160;</string>
    <string name="fileinfo_bytesnumber">字符数:&#160;&#160;</string>
    <string name="fileinfo_transformat">转换格式</string>
    <string name="fileinfo_waittime">等待时间：&#160;</string>
    <string name="fileinfo_preciseOcrinfo1">现在下单，识别结果可在&#160;</string>
    <string name="fileinfo_preciseOcrinfo2">&#160;后查收，我们将以短信和邮件的形式通知您。</string>
    <string name="fileinfo_price">金额:&#160;&#160;</string>
    <string name="fileinfo_info">备注</string>
    <string name="fileinfo_infoedit">您的要求...</string>
    <string name="fileinfo_toPay">去支付</string>
    <string name="fileinfo_filename">文件:&#160;&#160;</string>
    <string name="fileinfo_uploadsuc">上传成功</string>
    <string name="fileinfo_evaprice">价格评估</string>
    <string name="fileinfo_feescale">收费标准</string>
    <string name="orderinfo_failedtime">订单失效时间:&#160;&#160;</string>
    <string name="orderinfo_preciseOcr">精准人工OCR识别文件</string>
    <string name="orderinfo_precise">精准人工识别文件</string>
    <string name="orderinfo_ordermsg">订单详情</string>
    <string name="orderinfo_ordernumber">订单号:&#160;&#160;</string>
    <string name="orderinfo_itemname">商品:&#160;&#160;</string>
    <string name="orderinfo_ordertime">订单时间:&#160;&#160;</string>
    <string name="orderinfo_payMode">支付方式:&#160;&#160;在线支付</string>
    <string name="orderinfo_peceiptname">收货人:&#160;&#160;</string>
    <string name="orderinfo_phonenumber">电话:&#160;&#160;</string>
    <string name="orderinfo_customerservice">客服</string>
    <string name="orderinfo_Ocring">人工识别中，已用时:&#160;&#160;</string>
    <string name="orderinfo_deletebtn">删除</string>
    <string name="orderlist_allorder">全部订单</string>
    <string name="orderlist_waitpay">待支付</string>
    <string name="orderlist_waitdown">待收取</string>
    <string name="orderlist_older">订单</string>
    <string name="payinfo_selectpaymode">选择支付方式</string>
    <string name="payinfo_wxpaymode">微信支付</string>
    <string name="payinfo_Alipaymode">支付宝</string>
    <string name="payinfo_amountpayable">应付金额:&#160;&#160;</string>
    <string name="payinfo_confirmpayment">确认付款</string>
    <string name="payinfo_pay">付款</string>

    <!-- 登录注册用到的标题 -->
    <string name="login_user">邮箱/手机</string>
    <string name="auth_code">验证码</string>
    <string name="login_pwd">密码</string>
    <string name="rgst_pwd">请设置密码，6-16位字母和数字组合</string>
    <string name="register_user">注册</string>
    <string name="login_third">----第三方登录----</string>
    <string name="login_button">登录</string>
    <string name="rgst_button">注册</string>
    <string name="rgst_email">邮箱注册</string>
    <string name="rgst_phone_user">请输入你的手机号</string>
    <string name="rgst_email_user">请输入你的常用邮箱地址</string>
    <string name="remember_pwd">忘记密码?</string>
    <string name="resetpwd_button">重设密码</string>
    <string name="resetpwd_doc">输入已注册的手机号或邮箱</string>
    <string name="resetpwd_reset">请输入新密码</string>
    <string name="new_passwd">新密码</string>
    <string name="ensure_new_passwd">确认新密码</string>
    <string name="reset_passwd_error">格式有误请输入6-16位字母和数字组合密码</string>
    <string name="pwd_format">6-16位数字和字母组合</string>
    <string name="ensure">确定</string>
    <string name="rmb_time">重新发送验证码(60s)</string>
    <string name="back">返回</string>
    <string name="forget_pwd">找回密码</string>
    <string name="empty_notebooklist_tips">NoteBook is empty</string>
    <string name="userid_found">用户信息已存在，正在跳转登录操作…</string>
    <string name="logining">使用%s帐号登录中…</string>
    <string name="auth_cancel">授权操作已取消</string>
    <string name="auth_error">授权操作遇到错误</string>
    <string name="client_error">未安装第三方客户端,请先进行第三方客户端的安装!</string>
    <string name="auth_complete">授权成功，正在跳转登录操作…</string>
    <!-- 账户基本信息显示用到的字段 -->
    <string name="account">账户</string>
    <string name="account_message">账户信息</string>
    <string name="myaccount">我的账户</string>
    <string name="show_account">用户账号</string>
    <string name="nickname">名字</string>
    <string name="bindemial">邮箱</string>
    <string name="modify_nickname">未填写</string>
    <string name="modify_bind">绑定</string>
    <string name="password_safety">密码安全</string>
    <string name="modify_passwd">修改密码</string>
    <string name="third_login">第三方</string>
    <string name="contactway">联系方式</string>
    <string name="loginout">退出登录</string>
    <string name="order_peceiptname">收货人</string>
    <string name="modify_name">请输入您的名字</string>
    <string name="third_sina">&#160;&#160;新浪微博</string>
    <string name="third_qq">&#160;&#160;QQ</string>
    <string name="third_weixin">&#160;&#160;微信</string>
    <string name="third_unbind">未绑定</string>

    <!-- camera activity -->
    <string name="camera_light_on">Light On</string>
    <string name="camera_light_off">Light Off</string>
    <string name="camera_light_auto">Light Auto</string>


    <string name="bc_str_confirm">OK</string>
    <string name="bc_str_cancle">Cancel</string>
    <string name="bc_str_back">Back</string>
    <string name="wb_str_done">Done</string>
    <string name="wb_str_rotate">Rotate</string>
    <string name="gallery">Gallery</string>
    <string name="shared">Share</string>
    <string name="all">All</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="dle_msg">All Data will be delete, continue?</string>

    <string name="title_failrec">Reconize fail</string>
    <string name="title_save_ret">Save</string>
    <string name="title_new_reco_result">New</string>
    <string name="title_share_ret">Share</string>
    <string name="title_exact">Exact</string>

    <string name="ret_str_share">Share</string>
    <string name="ret_str_copy">Copy</string>
    <string name="ret_str_exact">Exact</string>
    <string name="ret_str_del">Delete</string>
    <string name="rec_ret_save">Save</string>

    <string name="dlg_str_ok">OK</string>
    <string name="dlg_str_cancel">Cancel</string>
    <string name="dlg_str_yes">Yes</string>
    <string name="dlg_str_no">No</string>
    <string name="reco_fail_continue">Continue</string>
    <string name="reco_recapture">Take a picture</string>
    <string name="bc_str_recapture">Capture</string>
    <string name="rec_ret_del">Delete file?</string>
    <string name="str_save_filename_tip">File Name</string>
    <string name="str_input_hint">Input here</string>
    <string name="str_file_format_tip">File Format</string>
    <string name="capture_single">Single</string>
    <string name="capture_multi">Multi</string>
    <string name="link_mess">生成连接中，请等待...</string>
    <string name="share_from_hanvon">来自汉王识文的分享</string>
    <string name="exact_tips">精准人工识别：通过后台专业的数据加工流水线，让识别结果更加精准，满足专业人员的工作需求。内测阶段，敬请期待。</string>
    <string name="auto_link_text">网页版已进行公测，体验网址：http://rc.hanvon.com</string>
    <string name="str_check_network">Please check network</string>
    <string name="str_dlg_tip">Tip</string>
    <string name="str_uploading">Uploading...</string>
    <string name="str_upload_done">Upload finish</string>
    <string name="str_title_upload">Upload</string>

    <string name="setting_clear_buffer">Clear buffers</string>
    <string name="setting_item_inputmethod">Inputmethod Setting</string>
    <string name="setting_item_upgrade">Auto Upgrade</string>
    <string name="setting_item_clear_buffer">Clear Buffers</string>
    <string name="setting_item_help_manual">Help Manual</string>
    <string name="setting_item_feedback">Feedback</string>
    <string name="setting_item_about">About us</string>
    <string name="title_about">About us</string>
    <string name="about_advertise">汉王识文，让学习生活更简单,更轻松,更便捷！</string>
    <string name="title_feedback">意见反馈</string>
    <string name="title_help">帮助手册</string>
    <string name="title_aboutUs">关于我们</string>
    <string name="feedback_thanks">Thanks</string>
    <string name="feedback_tip_question">Questions</string>
    <string name="feedback_tip_email">Email</string>
    <string name="feedback_tip_inputs_question">Your question</string>
    <string name="feedback_tip_inputs_email">For replay</string>
    <string name="feedback_commit">Commit</string>
    <string name="feedback_content_null">No content</string>
    <string name="feedback_mail_null">请填写您的邮箱</string>
    <string name="feedback_mail_addr_err">Mail addr error</string>
    <string name="feedback_progress">Sending...</string>
    <string name="feedback_error">Network error</string>
    <string name="feedback_upload_done">Commit success</string>
    <string name="tip_filename">File Name</string>
    <string name="tip_file_format">File format</string>
    <string name="tip_file_size">File size</string>
    <string name="contacts_name">联系人姓名</string>
    <string name="contacts_phone">联系人电话</string>
    <string name="contacts_title">修改联系方式</string>
</resources>
