<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F7F7F7"
    android:orientation="vertical" >

    <include layout="@layout/usermessage_title" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dip"
        android:layout_marginLeft="10dip"
        android:text="@string/account_message"
        android:textSize="18sp"
        android:textColor="#BCBCBC" />

    <RelativeLayout
        android:id="@+id/rl_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="85dip"
        android:background="@color/white"
        android:orientation="horizontal" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="20dip"
            android:layout_marginLeft="10dip"
            android:text="@string/myaccount"
            android:textSize="15sp"
            android:textColor="#333333"/>
        <TextView
            android:id="@+id/show_uesrname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dip"
            android:text="@string/show_account"
            android:textSize="15sp"
            android:textColor="#333333"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/name_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_account"
        android:layout_marginTop="2dip"
        android:background="@color/white"
        android:orientation="horizontal" >
        <TextView
            android:id="@+id/bindmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="20dip"
            android:layout_marginLeft="10dip"
            android:text="@string/bindemial"
            android:textSize="15sp"
            android:textColor="#333333"/>
        <TextView
            android:id="@+id/bind_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="25dip"
            android:text="@string/modify_bind"
            android:textSize="15sp"
            android:textColor="#333333"/>
        <ImageView
            android:id="@+id/modify_bind_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dip"
            android:background="@mipmap/right_arrow"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/modify_pwd_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dip"
        android:layout_below="@+id/name_id"
        android:background="@color/white"
        android:orientation="horizontal" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="20dip"
            android:layout_marginLeft="10dip"
            android:text="@string/modify_passwd"
            android:textSize="15sp"
            android:textColor="#333333"/>
        <ImageView
            android:id="@+id/modify_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dip"
            android:background="@mipmap/right_arrow"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/orderpeceiptname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:layout_below="@+id/modify_pwd_id"
        android:layout_marginLeft="10dip"
        android:text="@string/order_peceiptname"
        android:textSize="18sp"
        android:textColor="#BCBCBC" />

    <RelativeLayout
        android:id="@+id/conatctway"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:layout_below="@+id/orderpeceiptname"
        android:background="@color/white"
        android:orientation="horizontal" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="20dip"
            android:layout_marginLeft="10dip"
            android:text="@string/contactway"
            android:textSize="15sp"
            android:textColor="#333333"/>
        <ImageView
            android:id="@+id/modify_contactway"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dip"
            android:background="@mipmap/right_arrow"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/quit_login"
        android:layout_width="match_parent"
        android:layout_height="40dip"
        android:gravity="center"
        android:layout_below="@+id/conatctway"
        android:layout_marginTop="20dip"
        android:background="@color/white"
        android:text="@string/loginout"
        android:textSize="15sp"
        android:textColor="#959595"/>

</RelativeLayout>
